prevents placeholder from covering up input text when cursor was out

--- a/public/scatter.css
+++ b/public/scatter.css
@@ -297,7 +297,7 @@ text {
   transition: all 500ms;
 }
 
-#formContainer #inputNew:focus + #mainInputPlaceholder {
+#formContainer #inputNew:focus + #mainInputPlaceholder, #formContainer #inputNew:valid + #mainInputPlaceholder {
   font-size: 12px;
   left: 5px;
   bottom: 30px;
